--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <div class="mt-12 flex flex-col gap-20 lg:flex-row justify-evenly lg:gap-x-20 ">
       <!-- card 1 -->
       <div class="card bg-base-100 shadow-md text-center pt-12 items-center">
-        <figure><img class="w-24 h-28" src="/images/fruit6.png" alt="Shoes" /></figure>
+        <figure><img class="w-24 h-28" src="images/fruit6.png" alt="Shoes" /></figure>
         <div class="card-body">
           <h2 class="card-title pl-10 py-8">12.90$ - 18.85$</h2>
           <p>Apples</p>
@@ -326,7 +326,7 @@
       </div>
       <!-- card 2 -->
       <div class="card bg-base-100 shadow-md text-center pt-12 items-center">
-        <figure><img class="w-24 h-28" src="/images/fruit7.png" alt="Orange" /></figure>
+        <figure><img class="w-24 h-28" src="images/fruit7.png" alt="Orange" /></figure>
         <div class="card-body">
           <h2 class="card-title pl-10 py-8">12.90$ - 18.85$</h2>
           <p>Orange</p>
@@ -383,7 +383,7 @@
       </div>
       <!-- card 3 -->
       <div class="card bg-base-100 shadow-md text-center pt-12 items-center">
-        <figure><img class="w-24 h-28" src="/images/fruit8.png" alt="Red Dragon" /></figure>
+        <figure><img class="w-24 h-28" src="images/fruit8.png" alt="Red Dragon" /></figure>
         <div class="card-body">
           <h2 class="card-title pl-10 py-8">12.90$ - 18.85$</h2>
           <p>Red Dragon</p>
@@ -440,7 +440,7 @@
       </div>
       <!-- card 4 -->
       <div class="card bg-base-100 shadow-md text-center pt-12 items-center">
-        <figure><img class="w-24 h-28" src="/images/fruit9.png" alt="Banana" /></figure>
+        <figure><img class="w-24 h-28" src="images/fruit9.png" alt="Banana" /></figure>
         <div class="card-body">
           <h2 class="card-title pl-10 py-8">12.90$ - 18.85$</h2>
           <p>Banana</p>
@@ -515,7 +515,7 @@
           <!-- card 1 -->
           <div class="card">
             <figure class="px-10 pt-10">
-              <img src="/images/member1.png" alt="Shoes" class="rounded-xl" />
+              <img src="images/member1.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">Awlad Hossain</h2>
@@ -530,7 +530,7 @@
           <!-- card 2 -->
           <div class="card">
             <figure class="px-10 pt-10">
-              <img src="/images/member2.png" alt="Shoes" class="rounded-xl" />
+              <img src="images/member2.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">Safia Chowdhury</h2>
@@ -545,7 +545,7 @@
           <!-- card 3 -->
           <div class="card">
             <figure class="px-10 pt-10">
-              <img src="/images/member3.png" alt="Shoes" class="rounded-xl" />
+              <img src="images/member3.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">Rokib Hossain</h2>
@@ -560,7 +560,7 @@
           <!-- card 4 -->
           <div class="card">
             <figure class="px-10 pt-10">
-              <img src="/images/member4.png" alt="Shoes" class="rounded-xl" />
+              <img src="images/member4.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">Chaity</h2>
