--- a/index.html
+++ b/index.html
@@ -580,6 +580,76 @@
   <!-- main team section end -->
 
   <!-- bonus section start -->
+  <section class="mt-16">
+    <div class="md:container md:mx-auto text-center">
+      <h1 class="font-bold text-5xl">Why Choose Us</h1>
+      <p class="mt-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+    </div>
+    <div class="flex flex-col lg:flex-row md:container md:mx-auto text-center gap-10 mt-10">
+     <div>
+      <div class=" mt-8 flex gap-10 items-center">
+        <div>
+        <img class="h-10 w-10 rounded-full bg-slate-100" src="images/group 1.png" alt="">
+        </div>
+        <div>
+          <h1 class="text-2xl font-bold">Dedicated Team</h1>
+          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+        </div>
+      </div>
+      <div class=" mt-8 flex gap-10 items-center">
+        <div>
+        <img class="h-10 w-10 rounded-full bg-slate-100"  src="images/love 1.png">
+        </div>
+        <div>
+          <h1 class="text-2xl font-bold">Fresh is Best</h1>
+          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+        </div>
+      </div>
+      <div class=" mt-8 flex gap-10 items-center">
+        <div>
+        <img class="h-10 w-10 rounded-full bg-slate-100" src="images/gift-box 1.png">
+        </div>
+        <div>
+          <h1 class="text-2xl font-bold">Gift Certificates</h1>
+          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <img src="images/whychoose1.png" alt="">
+    </div>
+    <div>
+      <div class=" mt-8 flex flex-row-reverse gap-10 items-center">
+        <div>
+        <img class="h-10 w-10 rounded-full bg-slate-100" src="images/fruit 1.png">
+        </div>
+        <div>
+          <h1 class="text-2xl font-bold">Integrated Supplier</h1>
+          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+        </div>
+      </div>
+      <div class=" mt-8 flex flex-row-reverse gap-10 items-center">
+        <div>
+        <img class="h-10 w-10 rounded-full bg-slate-100"  src="images/ice-cream 1.png">
+        </div>
+        <div>
+          <h1 class="text-2xl font-bold">Sustainable Practice</h1>
+          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+        </div>
+      </div>
+      <div class=" mt-8 flex flex-row-reverse gap-10 items-center">
+        <div>
+        <img class="h-10 w-10 rounded-full bg-slate-100" src="images/like 1.png">
+        </div>
+        <div>
+          <h1 class="text-2xl font-bold">The Benefits Only</h1>
+          <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <!-- bonus section End Here -->
 
   <!-- footer section start -->
   <footer>
